fix(Catalog tiles): decrease the vertical spacing between catalog tiles (#669)
affects: patternfly3-react-lerna-root, patternfly-react-extensions

ISSUES CLOSED: #668

--- a/packages/patternfly-3/patternfly-react-extensions/less/catalog-tile.less
+++ b/packages/patternfly-3/patternfly-react-extensions/less/catalog-tile.less
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: @catalog-tile-pf-height;
-  margin: 0 20px @catalog-tile-pf-margin-bottom 0;
+  margin: 0 15px @catalog-tile-pf-margin-bottom 0;
   padding: 15px;
   width: @catalog-tile-pf-width;
 
@@ -70,11 +70,11 @@
 }
 
 .catalog-tile-view-pf-category {
-  margin: 10px 0;
+  margin: 10px 0 15px;
 }
 
 .catalog-tile-view-pf-category-header {
-  padding-right: 20px;
+  padding-right: 15px;
 }
 
 .catalog-tile-view-pf-category-header-title {
